--- a/assets/style.css
+++ b/assets/style.css
@@ -41,11 +41,7 @@ h1{
 span{
     font-size:inherit;
 }
-input {
-    width: auto;
-    min-width: min-content;
-    max-width: max-content;
-}
+
 #container{
     font-family: 'NanumSquareNeo', sans-serif;
     font-weight: 400;
@@ -56,18 +52,28 @@ input {
     flex-direction: column;
     align-items: center;
     padding: 48px;
-    gap:64px;
+    /* gap:32px; */
     overflow-x: hidden;
 }
 .setting-container{
+    position: relative;
+
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
+    top: -32px;
+    align-items: center;
     width: 100%;
+    height:64px;
+}
+.today-complete-task-num-container{
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: center;
+    gap: 6px;
 }
 .setting-button{
-    position: relative;
-    right: -32px;
-    top: -32px;
     width: 48px;
     height: 48px;
 }
@@ -169,15 +175,28 @@ input {
     background-color: black;
 }
 
-#to-do-list{
+#to-do-list {
     display: flex;
     flex-direction: column;
     width: 100%;
-    gap:24px;
-    height: 300px;  /* 또는 원하는 높이 */
-    overflow-y: auto; 
-    -ms-overflow-style: none;  /* IE, Edge */
-    scrollbar-width: none;   
+    gap: 24px;
+    height: 300px;
+    overflow-y: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    /* 픽셀 단위로 그림자 설정 */
+    mask-image: linear-gradient(to bottom, 
+        transparent 0px,
+        black 50px,
+        black calc(100% - 50px),
+        transparent 100%
+    );
+    -webkit-mask-image: linear-gradient(to bottom, 
+        transparent 0px,
+        black 50px,
+        black calc(100% - 50px),
+        transparent 100%
+    );
 }
 #to-do-list::-webkit-scrollbar {
     display: none;
@@ -216,6 +235,7 @@ input {
     position: relative;
     right: 12px;
     font-size: 1.5em;
+    color: black
 }
 .list-task-name:focus{
     border: 0px solid #ffffff00;
@@ -256,11 +276,13 @@ input {
     border: 0px solid #ffffff00;
     border-bottom: 2px solid #000000;
     outline: none;
+    background-color: white;
     /* border-radius: 8px; */
 }
 .todo-input:focus {
     border: 0px solid #ffffff; /* 기존 테두리 유지 */
     border-bottom: 2px solid #000000;
+    background-color: white;
     /* 또는 다른 색상으로 변경 가능: border: 2px solid #4CAF50; */
 }
 
@@ -332,6 +354,9 @@ input {
 
 .left-mg-4{
     margin-left: 4px;
+}
+.top-mg-32{
+    margin-top: 32px;
 }
 
 .completed{
